[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Tharini <tharinikndsm@gmail.com>"]
description = ""
name = "wellmaderuralerrors"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
python = "^3.7"
Flask-REST = "^1.3"
bs4 = "^0.0.1"
gunicorn = "^20.0"
[tool.poetry.dev-dependencies]
